--- a/.pyci.yaml
+++ b/.pyci.yaml
@@ -1,6 +1,7 @@
 IMAGE: python:3.5
 
 SCRIPT:
+    - notascriptwillfail
     - pip install --upgrade pip
     - pip install -r requirements.txt
     - pip install coverage
