--- a/.pyci.yaml
+++ b/.pyci.yaml
@@ -9,5 +9,5 @@ SCRIPT:
     - python manage.py makemigrations
     - python manage.py migrate
     - coverage run manage.py test
-    - coverage report
+    - coverage xml
     - flake8
