--- a/.drone.yml
+++ b/.drone.yml
@@ -3,20 +3,24 @@ load: "1"
 kind: pipeline
 name: test
 
+platform:
+  os: linux
+  arch: arm64
+
 trigger:
   event:
     - push
 
+volumes:
+  - name: dockersock
+    host:
+      path: /var/run/docker.sock
+
 steps:
-- name: test
+- name: info
   image: docker:dind
   volumes:
   - name: dockersock
     path: /var/run/docker.sock
   commands:
   - docker info
-
-volumes:
-- name: dockersock
-  host:
-    path: /var/run/docker.sock
