--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,5 +23,5 @@ jobs:
       - name: Connect to Redis
         run: |
           echo number: ${INPUT_NUMBER}
-          apt-get install redis
+          sudo apt-get install redis
           redis-cli -h localhost ping
