--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,23 +5,24 @@ on:
   workflow_dispatch:
     inputs:
       number:
-        description: 'Test Number'
-        required: false
+        description: 'Number'
+        required: true
         default: '420'
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
+#    services:
+#      redis:
+#        image: redis
+#        ports:
+#          - 6379:6379
 
     steps:
       - name: Connect to Redis
         run: |
+          echo github.event.inputs.number: ${{ github.event.inputs.number }}
           echo number: ${INPUT_NUMBER}
-          sudo apt-get install redis
-          redis-cli -h localhost ping
+#          sudo apt-get install redis
+#          redis-cli -h localhost ping
