--- a/.github/workflows/artifact.yaml
+++ b/.github/workflows/artifact.yaml
@@ -1,26 +1,25 @@
-name: Artifact Test
+name: "Test"
 
 on:
   push:
 
 jobs:
   test:
-    name: "Artifact Test"
+    name: "Test"
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
     steps:
-      push-artifacts:
-        - name: "Upload Artifact"
-          uses: actions/upload-artifact@v3
-          with:
-            name: artifacts
-            path: examples/
+      - name: "Upload Artifact"
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifacts
+          path: examples/
 
-        - name: "Push Artifacts"
-          uses: hosted-domains/workflows/.github/workflows/push-artifacts.yaml@master
-          with:
-            name: artifacts
+      - name: "Push Artifacts"
+        uses: hosted-domains/workflows/.github/workflows/push-artifacts.yaml@master
+        with:
+          name: artifacts
 #            ftp-host: ${{ secrets.FTP_HOST }}
 #            ftp-user: ${{ secrets.FTP_USER }}
 #            ftp-pass: ${{ secrets.FTP_PASS }}
