--- a/.github/workflows/artifact.yaml
+++ b/.github/workflows/artifact.yaml
@@ -10,13 +10,16 @@ jobs:
     timeout-minutes: 5
 
     steps:
+      - name: "Checkout"
+        uses: actions/checkout@v3
+
       - name: "Upload Artifact"
         uses: actions/upload-artifact@v3
         with:
-          name: artifacts
-          path: examples/
+          name: "artifacts"
+          path: "examples/"
 
       - name: "Push Artifacts"
         uses: hosted-domains/gh-push-artifacts@master
         with:
-          name: artifacts
+          name: "artifacts"
