--- a/.github/workflows/artifact.yaml
+++ b/.github/workflows/artifact.yaml
@@ -28,5 +28,5 @@ jobs:
           pass: ${{ secrets.RSYNC_PASS }}
           port: "2222"
           base: "/static"
-          webhost: "http://jammy.local:8000/"
+          webhost: "http://jammy.local:8000"
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
