--- a/.drone.yml
+++ b/.drone.yml
@@ -90,8 +90,8 @@ steps:
     commands:
       - set -a; . ./.environment
 
-      - IFS=',' read -ra ARRAY <<< "${ENV_NAMES}"
-      - for ENV_NAME in "${ARRAY[@]}"; do
+      - IFS=',' read -ra ARRAY <<< "$${ENV_NAMES}"
+      - for ENV_NAME in "$${ARRAY[@]}"; do
       -   export ENV_FILE="$${CONFIGS_DIR}/services/$${DRONE_REPO_OWNER}/$${DRONE_REPO_NAME}/$${ENV_NAME}/$${CONFIG_FILE}"
       -   set -a; . $${ENV_FILE}
       -   echo ENV_NAME $${ENV_NAME}
