--- a/.drone.yml
+++ b/.drone.yml
@@ -42,7 +42,7 @@ steps:
       - elif [ "$${DRONE_DEPLOY_TO}" = ralph ];then
       -   export ENV_NAMES='ralph'
       - else
-      -   export ENV_NAMES='dev,dev3'
+      -   export ENV_NAMES='dev dev3'
       - fi
       - echo "ENV_NAMES='$${ENV_NAMES}'" >> ./.environment
       - export TRAEFIK_HOST=$(if [ "$${DRONE_DEPLOY_TO}" = prod ];then echo $${PROD_HOST};elif [ "$${DRONE_DEPLOY_TO}" = ralph ];then echo $${RALPH_HOST};else echo $${DEV_HOST};fi)
