--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: "Test Docker Stack Push"
+name: "Test Docker Stack Deploy"
 
 on:
   push:
@@ -13,8 +13,8 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v3
 
-      - name: "Docker Stack Push"
-        uses: hosted-domains/stack-push-action@master
+      - name: "Docker Stack Deploy"
+        uses: hosted-domains/stack-deploy-action@master
         with:
           host: ${{ secrets.DOCKER_HOST }}
           user: ${{ secrets.DOCKER_USER }}
