--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,8 +23,8 @@ jobs:
 
       - name: "Commit files"
         run: |
-          git config --local user.email "no-reply@hosted-domains.com"
-          git config --local user.name "django-ci-bot"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git commit -a -m "Version ${GITHUB_REF_NAME}"
 
       - name: "Push changes"
