--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,12 @@ on:
   push:
     tags:
       - '**'
+  workflow_dispatch:
+    inputs:
+      tags:
+        description: 'Tags: comma,separated'
+        required: true
+        default: 'latest'
 
 jobs:
   tags:
@@ -17,18 +23,21 @@ jobs:
 
       - name: "Update Manifest"
         run: |
-          echo "${GITHUB_REF_NAME}" > version.txt
-          git status
-          git diff
+          echo "github.event.action: ${{github.event.action}}"
+          echo "inputs.tags: ${{ inputs.tags }}"
+          echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
+#          echo "${GITHUB_REF_NAME}" > version.txt
+#          git status
+#          git diff
 
-      - name: "Commit files"
-        run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git commit -a -m "Version ${GITHUB_REF_NAME}"
-
-      - name: "Push changes"
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
+#      - name: "Commit files"
+#        run: |
+#          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+#          git config --local user.name "github-actions[bot]"
+#          git commit -a -m "Version ${GITHUB_REF_NAME}"
+#
+#      - name: "Push changes"
+#        uses: ad-m/github-push-action@master
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          branch: master
