--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,9 @@ jobs:
 
       - name: "Update Manifest"
         run: |
-          echo "github.event.action: ${{github.event.action}}"
+          echo "github.event: ${{ github.event }}"
+          echo "github.event_name: ${{ github.event_name }}"
+          echo "github.event.action: ${{ github.event.action }}"
           echo "inputs.tags: ${{ inputs.tags }}"
           echo "GITHUB_REF_NAME: ${GITHUB_REF_NAME}"
 #          echo "${GITHUB_REF_NAME}" > version.txt
