--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,6 +23,7 @@ jobs:
 
       - name: "Update Manifest"
         run: |
+          echo "github.event.release.prerelease: ${{ github.event.release.prerelease }}"
           echo "github.event: ${{ github.event }}"
           echo "github.event_name: ${{ github.event_name }}"
           if [ "${{ github.event_name }}" = "workflow_dispatch" ];then
