--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,12 +22,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: "Not Pre-Release"
-        if: ${{ !github.event.prerelease }}
+        if: ${{ !github.event.release.prerelease }}
         run: |
           echo "NOT - PRERELEASE"
 
       - name: "Pre-Release"
-        if: ${{ github.event.prerelease }}
+        if: ${{ github.event.release.prerelease }}
         run: |
           echo "YES - PRERELEASE"
 
