--- a/.drone.yml
+++ b/.drone.yml
@@ -22,4 +22,5 @@ steps:
     commands:
       - export headers="Authorization: Bearer $CLOUDFLARE_TOKEN"
       - export url="https://api.cloudflare.com/client/v4/zones/$ZONE_ID/purge_cache"
-      - curl -X POST -H "$headers" -H "Content-Type: application/json" -d '{"purge_everything": true}' "$url"
+      - 'response=$(curl -X POST -H "$headers" -H "Content-Type: application/json" -d '\''{"purge_everything": true}'\'' "$url")'
+      - echo "$response"
