--- a/.github/workflows/testjs.yaml
+++ b/.github/workflows/testjs.yaml
@@ -18,5 +18,5 @@ jobs:
       - name: "Test JS"
         uses: smashedr/js-test-action@master
         with:
-          chrome: 'build/chrome.zip'
-#          firefox: 'build/firefox.zip'
+#          chrome: 'build/chrome.zip'
+          firefox: 'build/firefox.zip'
