--- a/.github/workflows/testjs.yaml
+++ b/.github/workflows/testjs.yaml
@@ -17,6 +17,13 @@ jobs:
 
       - name: "Test JS"
         uses: smashedr/js-test-action@master
+        env:
+          WEXT_SHIPIT_CHROME_EXTENSION_ID: ""
+          WEXT_SHIPIT_CHROME_CLIENT_ID: ""
+          WEXT_SHIPIT_CHROME_CLIENT_SECRET: ""
+          WEXT_SHIPIT_CHROME_REFRESH_TOKEN: ""
+          WEXT_SHIPIT_FIREFOX_JWT_ISSUER: ""
+          WEXT_SHIPIT_FIREFOX_JWT_SECRET: ""
         with:
-          chrome: 'build/chrome.zip'
-          firefox: 'build/firefox.zip'
+          chrome: "build/chrome.zip"
+          firefox: "build/firefox.zip"
