--- a/.github/workflows/testvt.yaml
+++ b/.github/workflows/testvt.yaml
@@ -15,8 +15,9 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v3
 
-      - name: "Test JS"
+      - name: "VirusTotal"
         uses: smashedr/virustotal-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           vt_api_key: ${{ secrets.VT_API_KEY }}
+          update_release: false
