--- a/.github/workflows/testvt.yaml
+++ b/.github/workflows/testvt.yaml
@@ -20,4 +20,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           vt_api_key: ${{ secrets.VT_API_KEY }}
-          update_release: false
+          update_release: true
