--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,7 @@
   "homepage_url": "https://github.com/cssnr/link-extractor",
   "version": "0.1.0",
   "manifest_version": 3,
-  "permissions": [
-    "activeTab",
-    "contextMenus",
-    "scripting",
-    "storage"
-  ],
+  "permissions": ["activeTab", "contextMenus", "scripting", "storage"],
   "background": {
     "type": "module"
   },
@@ -34,5 +29,11 @@
     "48": "images/logo48.png",
     "96": "images/logo96.png",
     "128": "images/logo128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "hls-video-downloader@cssnr.com",
+      "strict_min_version": "112.0"
+    }
   }
 }
