--- a/.github/workflows/testvt.yaml
+++ b/.github/workflows/testvt.yaml
@@ -21,3 +21,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           vt_api_key: ${{ secrets.VT_API_KEY }}
           update_release: true
+          rate_limit: invalid
