--- a/.github/workflows/tags.yaml
+++ b/.github/workflows/tags.yaml
@@ -18,5 +18,6 @@ jobs:
       - name: "Update Tags"
         uses: smashedr/update-tags-action@master
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           major: true
           minor: true
