--- a/.github/workflows/tags.yaml
+++ b/.github/workflows/tags.yaml
@@ -12,8 +12,8 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4
+#      - name: "Checkout"
+#        uses: actions/checkout@v4
 
       - name: "Update Tags"
         uses: smashedr/update-tags-action@master
