--- a/.github/workflows/tags.yaml
+++ b/.github/workflows/tags.yaml
@@ -24,3 +24,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           major: true
           minor: true
+          tags: |
+            v1
+            v1.1
